# energie-monitor-app

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: agentic-prompt-chain.md
scripts/: deploy.sh
src/energie_monitor/: aggregation.py  config.py  main.py  models.py
src/energie_monitor/services/: __init__.py  metrics.py
src/energie_monitor/sources/: __init__.py  heat_pump.py  homeassistant.py  volkszaehler.py
tests/: test_aggregation.py  test_api.py
